@@ -1,8 +1,11 @@
 collectd (3.5.0-1) unstable; urgency=low
 
   * New upstream version
+  * Added dependency to `cpufreqd | powernowd | cpudyn' to `collectd-cpufreq' 
+  * Added `collectd-users'
+  * Added `--localstatedir=/var' to `./configure'
 
- -- Florian Forster <octo@verplant.org>  Wed, 07 Dec 2005 11:50:17 +0200
+ -- Florian Forster <octo@verplant.org>  Fri, 16 Dec 2005 13:06:43 +0200
 
 collectd (3.4.0-1) unstable; urgency=low
 
